--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <img id="logo1" src="res\icon.ico" height="60">
     <div id=about_tp><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Если файл блокируется антивирусом, отключите его. В наших проектах нет вирусов, все срабатывания ложные, срабатывания на Visrustotal.com тоже. Необходимы библиотеки .Net 5.0 для программы и .Net Core 3.1 для установщика обновлений (https://dotnet.microsoft.com/en-us/download/dotnet). Поддерживаются процессоры на архитектуре x86.</font></div>
     <a id="downloadtp" href="res\Setup_TextPad+.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать TextPad+ 1.7</strong></font></a><br>
-    <a id="old_vertp" href="https://winsoft-net.github.io/TextPad-old-Versions/"><font face="Calibri"><strong>Все версии</strong></font></a><br>
+    <a id="old_vertp" href="https://mr-nichosik.github.io/"><font face="Calibri"><strong>Все версии</strong></font></a><br>
     <img id="screen_ru_tp" src="res\rus.png">
     <img id="screen_en_tp" src="res\en.png">
 
     <img id="logo2" src="res\app.ico" height="60">
-    <div id=about_fw><font face="Calibri">File Writer — это старая версия программы TextPad+ сделанная на языке Python и его библиотеке Tkinter, Простейший текстовый редактор, На данный момент обновления программы не планируются.</font></div>
+    <div id=about_fw><font face="Calibri">File Writer — это простейший текстовый редактор, сделанная на языке Python и его библиотеке Tkinter, Простейший текстовый редактор, На данный момент обновления программы не планируются.</font></div>
     <a id="downloadfw" href="res\Setup File Writer 2.3.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать File Writer 2.3</strong></font></a><br>
     <img id="screenfwrus" src="res\fwrus.png">
     <img id="screenfwen" src="res\fwen.png">
