--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="dist\css\lightbox.css" rel="stylesheet" type="text/css"/>
+    <script src="script.js"></script>
     <title>SoftPI</title>
     <link rel="shortcut icon" href="res\logo.png" type="image/x-icon">
     <style>
@@ -17,13 +19,18 @@
     <div id=about_tp><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Если файл блокируется антивирусом, отключите его. В наших проектах нет вирусов, все срабатывания ложные, срабатывания на Visrustotal.com тоже. Необходимы библиотеки .Net 5.0 для программы и .Net Core 3.1 для установщика обновлений (https://dotnet.microsoft.com/en-us/download/dotnet). Поддерживаются процессоры на архитектуре x86.</font></div>
     <a id="downloadtp" href="res\Setup_TextPad+.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать TextPad+ 1.7</strong></font></a><br>
     <a id="old_vertp" href="https://mr-nichosik.github.io/TextPad_old_versions"><font face="Calibri"><strong>Все версии</strong></font></a><br>
-    <img id="screen_ru_tp" src="res\rus.png">
-    <img id="screen_en_tp" src="res\en.png">
+    
 
     <img id="logo2" src="res\app.ico" height="60">
     <div id=about_fw><font face="Calibri">File Writer — это простейший текстовый редактор, сделанная на языке Python и его библиотеке Tkinter, Простейший текстовый редактор, На данный момент обновления программы не планируются.</font></div>
     <a id="downloadfw" href="res\Setup File Writer 2.3.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать File Writer 2.3</strong></font></a><br>
-    <img id="screenfwrus" src="res\fwrus.png">
-    <img id="screenfwen" src="res\fwen.png">
+
+    <div class="container">
+        <a href="res\fwrus.png" data-lightbox="test"><img id="screenfwrus" src="res\fwrus.png" class="minimized" alt="Кликни для увеличения" /></a>
+        <a href="res\fwen.png" data-lightbox="test"><img id="screenfwen" src="res\fwen.png" class="minimized" alt="Кликни для увеличения" /></a>
+        <a href="res\rus.png" data-lightbox="test"><img id="screen_ru_tp" src="res\rus.png" class="minimized" alt="Кликни для увеличения" /></a>
+        <a href="res\en.png" data-lightbox="test"><img id="screen_en_tp" src="res\en.png" class="minimized" alt="Кликни для увеличения" /></a>  
+    </div>
+<script src="dist\js\lightbox-plus-jquery.js"></script>
 </body>
 </html>
