--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
     <img id="logo2" src="res\app.ico" height="60">
-    <div id=about_fw><font face="Calibri">File Writer — это простейший текстовый редактор, сделанная на языке Python и его библиотеке Tkinter, Простейший текстовый редактор, На данный момент обновления программы не планируются.</font></div>
+    <div id=about_fw><font face="Calibri">File Writer — это простейший текстовый редактор, сделанный на языке Python и его библиотеке Tkinter, На данный момент обновления программы не планируются.</font></div>
     <a id="downloadfw" href="res\Setup File Writer 2.3.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать File Writer 2.3</strong></font></a><br>
 
     <div class="container">
