--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="m4z6I-xnkBrjA6l6Rj1DbGydXbkoVP6dD0F1ux7vSYs"/>
 </head>
 <body>
-    <div id=site-name href="https://winsoft-net.github.io/Main-Page/"><center><font face="Calibri">SoftPI</font></center></div>
+    <div id=site-name href="https://mr-nichosik.github.io/Main-Page/"><center><font face="Calibri">SoftPI</font></center></div>
     <div id="rus"><font face="Calibri">(Russian Language only)</font></div>
     <div id="projects"><font face="Calibri">Наши проекты:</font></div>
     <img id="logo1" src="res\icon.ico" height="60">
@@ -20,7 +20,7 @@
     <div id=SDK6-0><font face="Calibri"> .Net 6.0: https://dotnet.microsoft.com/en-us/download/dotnet/6.0</font></div>
     <div id=SDK5-0><font face="Calibri"> .Net 5.0: https://dotnet.microsoft.com/en-us/download/dotnet/5.0</font></div>
     <div id=SDK3-1><font face="Calibri"> .Net 3.1: https://dotnet.microsoft.com/en-us/download/dotnet/3.1</font></div>
-    <a id="downloadtp" href="res\Setup_TextPad+.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать TextPad+ 1.9</strong></font></a><br>
+    <a id="downloadtp" href="res\Setup_TextPad+.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать TextPad+ 2.0</strong></font></a><br>
     <a id="old_vertp" href="https://mr-nichosik.github.io/TextPad_old_versions"><font face="Calibri"><strong>Все версии</strong></font></a><br>
     
 
