--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="projects"><font face="Calibri">Наши проекты:</font></div>
     <img id="logo1" src="res\icon.ico" height="60">
     <div id=about_tp><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима устаовленния для Windows библиотека .NET SDK 6.0. Для версий с 1.4 по 1.7 включительно нужны библиотеки .NET SDK 5 и .NET Core SDK 3.1 . Для версий старее нужна только библиотека .Net Core SDK 3.1. Поддерживаются процессоры на архитектуре x86.</font></div>
-    <div id=SDK6-0><font face="Calibri"> .Net 6.0: https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.12-windows-x86-installer?cid=getdotnetcore</font></div>
-    <div id=SDK5-0><font face="Calibri"> .Net 5.0: https://dotnet.microsoft.com/en-us/download/dotnet/5.0</font></div>
-    <div id=SDK3-1><font face="Calibri"> .Net 3.1: https://dotnet.microsoft.com/en-us/download/dotnet/3.1</font></div>
+    <a id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.12-windows-x86-installer?cid=getdotnetcore"><font face="Calibri"> .Net 6.0</font></a>
+    <a id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/5.0"><font face="Calibri"> .Net 5.0</font></a>
+    <a id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/3.1"><font face="Calibri"> .Net 3.1</font></a>
     <a id="downloadtp" href="res\Setup_TextPad+.exe" target="_blank" download=""><font face="Calibri"><strong>Скачать TextPad+ 2.0</strong></font></a><br>
     <a id="old_vertp" href="https://mr-nichosik.github.io/TextPad_old_versions"><font face="Calibri"><strong>Все версии</strong></font></a><br>
     
