--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <a id=siteName href="https://mr-nichosik.github.io/Main_Page/"><center>TextPad+</center></a>
         <a id=Main href="https://mr-nichosik.github.io/Main_Page/"><center>Главная</center></a>
-        <a id=Downloads href="https://github.com"><center>Загрузки</center></a>
+        <a id=Downloads href="https://mr-nichosik.github.io/AboutTextPadPlus/"><center>Загрузки</center></a>
     </header>
 
     <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
@@ -20,7 +20,7 @@
     <a id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer"><font face="Calibri"> .Net 5.0</font></a>
     <a id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer"><font face="Calibri"> .Net Core 3.1</font></a>
     <a id="downloadTP" href="res\Setup_TextPad+.exe" ><font face="Calibri"><strong>Скачать TextPad+ 2.0</strong></font></a><br>
-    <a id="informationTP" href="https://mr-nichosik.github.io/TextPad_old_versions"><font face="Calibri"><strong>Подробнее</strong></font></a><br>
+    <a id="informationTP" href="https://mr-nichosik.github.io/AboutTextPadPlus/"><font face="Calibri"><strong>Подробнее</strong></font></a><br>
 
     <div class="container">
         <a href="res\tp_rus.png" data-lightbox="test"><img id="screen_ru_tp" src="res\tp_rus.png" class="minimized" alt="Кликни для увеличения" /></a>
