--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     </header>
 
     <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
-    <div id=aboutTP><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET Runtime Desktop 6.0. Для версий с 1.4 по 1.7 включительно нужны библиотеки .NET Runtime Desktop 5 и .NET Core Runtime Desktop 3.1 . Для версий старее нужна только библиотека .Net Core Runtime Desktop 3.1. Работает на архитектуре x86.</font></div>
+    <div id=AboutTextPad><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET Runtime Desktop 6.0. Для версий с 1.4 по 1.7 включительно нужны библиотеки .NET Runtime Desktop 5 и .NET Core Runtime Desktop 3.1 . Для версий старее нужна только библиотека .Net Core Runtime Desktop 3.1. Работает на архитектуре x86 и поддерживает Windows 7.</font></div>
     <a id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer"><font face="Calibri"> .Net 6.0</font></a>
     <a id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer"><font face="Calibri"> .Net 5.0</font></a>
     <a id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer"><font face="Calibri"> .Net Core 3.1</font></a>
-    <a id="downloadTP" href="res\Setup_TextPad+.exe" ><font face="Calibri"><strong>Скачать TextPad+ 2.1</strong></font></a><br>
-    <a id="informationTP" href="https://mr-nichosik.github.io/AboutTextPadPlus/"><font face="Calibri"><strong>Подробнее</strong></font></a><br>
+    <a id="DownloadTextPad" href="res\Setup TextPad+.exe" ><font face="Calibri"><strong>Скачать TextPad+ 2.2</strong></font></a><br>
+    <a id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/"><font face="Calibri"><strong>Все версии</strong></font></a><br>
 
     <div class="container">
-        <a href="res\tp_rus.png" data-lightbox="test"><img id="screen_ru_tp" src="res\tp_rus.png" class="minimized" alt="Кликни для увеличения" /></a>
-        <a href="res\tp_en.png" data-lightbox="test"><img id="screen_en_tp" src="res\tp_en.png" class="minimized" alt="Кликни для увеличения" /></a>
+        <a href="res\ScreenTextPad1.png" data-lightbox="test"><img id="ScreenTextPad1" src="res\ScreenTextPad1.png" class="minimized" alt="Кликни для увеличения" /></a>
+        <a href="res\ScreenTextPad2.png" data-lightbox="test"><img id="ScreenTextPad2" src="res\ScreenTextPad2.png" class="minimized" alt="Кликни для увеличения" /></a>
     </div>
 
     <script src="dist\js\lightbox-plus-jquery.js"></script>
