--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <header>
-        <a id=siteName href="https://mr-nichosik.github.io/Main_Page/"><center>TextPad+</center></a>
-        <a id=Main href="https://mr-nichosik.github.io/Main_Page/"><center>Главная</center></a>
-        <a id=Downloads href="https://mr-nichosik.github.io/AboutTextPadPlus/"><center>Загрузки</center></a>
+        <a class="link" id=siteName href="https://mr-nichosik.github.io/Main_Page/"><center>TextPad+</center></a>
+        <a class="link" id=Main href="https://mr-nichosik.github.io/Main_Page/"><center>Главная</center></a>
+        <a class="link" id=Downloads href="https://mr-nichosik.github.io/AboutTextPadPlus/"><center>Загрузки</center></a>
     </header>
 
     <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
-    <div id=AboutTextPad><font face="Calibri">TextPad+ — это бесплатный текстовый редактор, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET Runtime Desktop 6.0. Для версий с 1.4 по 1.7 включительно нужны библиотеки .NET Runtime Desktop 5 и .NET Core Runtime Desktop 3.1 . Для версий старее нужна только библиотека .Net Core Runtime Desktop 3.1. Работает на архитектуре x86 и поддерживает Windows 7.</font></div>
-    <a id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer"><font face="Calibri"> .Net 6.0</font></a>
-    <a id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer"><font face="Calibri"> .Net 5.0</font></a>
-    <a id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer"><font face="Calibri"> .Net Core 3.1</font></a>
-    <a id="DownloadTextPad" href="res\Setup TextPad+.exe" ><font face="Calibri"><strong>Скачать TextPad+ 2.2</strong></font></a><br>
-    <a id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/"><font face="Calibri"><strong>Все версии</strong></font></a><br>
+    <div id=AboutTextPad>TextPad+ — это бесплатный текстовый редактор с открытым исходным кодом, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET 6 Runtime Desktop. Для версий с 1.4 по 1.8 включительно нужна библиотека .NET 5 Runtime Desktop. Для версий старее нужна только библиотека .Net Core 3.1 Runtime Desktop. Работает на архитектуре x86 и поддерживает Windows 7.</div>
+    <a class="link" id="GitHubSource" target="_blank" href="https://github.com/Mr-Nichosik/TextPadPlus">Исходный код программы на GitHub</a>
+    <a class="link" id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
+    <a class="link" id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
+    <a class="link" id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
+    <a class="Button" id="DownloadTextPad" href="res\Setup TextPad+.exe" >Скачать TextPad+ 2.2.1</a>
+    <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/">Все версии</a>
 
     <div class="container">
         <a href="res\ScreenTextPad1.png" data-lightbox="test"><img id="ScreenTextPad1" src="res\ScreenTextPad1.png" class="minimized" alt="Кликни для увеличения" /></a>
