--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
-    <div id=AboutTextPad>TextPad+ — это бесплатный текстовый редактор с открытым исходным кодом, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET 6 Runtime Desktop. Для версий с 1.4 по 1.8 включительно нужна библиотека .NET 5 Runtime Desktop. Для версий старее нужна только библиотека .Net Core 3.1 Runtime Desktop. Работает на архитектуре x86 и поддерживает Windows 7.</div>
+    <div id=AboutTextPad>TextPad+ — это бесплатный текстовый редактор с открытым исходным кодом, предназначенный для быстрого создания и редактирования текстовых документов. Для новых версий программы необходима установленная для Windows библиотека .NET 6 Runtime Desktop. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для версий старее нужна только библиотека .Net Core 3.1 Runtime Desktop. Работает на архитектуре x86 и поддерживает Windows 7.</div>
     <a class="link" id="GitHubSource" target="_blank" href="https://github.com/Mr-Nichosik/TextPadPlus">Исходный код программы на GitHub</a>
     <a class="link" id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
     <a class="link" id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
