--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
         <main>
             <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
-            <p id=AboutTextPad>TextPad+ — это текстовый редактор с открытым исходным кодом, способный быстро создавать простые текстовые файлы. Работает на ПК архитектуры x86 и ОС Windows 7 и выше.<br/>Для новых версий нужно установить для библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop.<br/>Для более старых версий нужно установить только библиотеку для .NET Core 3.1.</p>
+            <p id=AboutTextPad>TextPad+ — это текстовый редактор с открытым исходным кодом, способный быстро создавать простые текстовые файлы. Работает на ПК архитектуры x86 и ОС Windows 7 и выше. </p>
+            <p id="InstallationGuide">Инструкци по установке:<br>Программа, начиная с версии 2.5.0, доступна для скачивания с ветки релиза на GitHub и не требует установки дополнительных компонентов.<br>Для версий с 1.9 по 2.4.0 включительно нужно установить для библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для более старых версий нужно установить только библиотеку для .NET Core 3.1.</p>
             <a class="link" id="GitHubSource" href="https://github.com/Mr-Nichosik/TextPadPlus" target="_blank">Исходный код программы на GitHub</a>
             <a class="link" id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
             <a class="link" id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
             <a class="link" id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
-            <a class="Button" id="DownloadTextPad" href="res\Setup TextPad+.exe" >Скачать TextPad+ 2.4.0</a>
+            <a class="Button" id="DownloadTextPad" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe" >Скачать TextPad+ 2.5.0</a>
             <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/">Все версии</a>
 
             <div class="container">
@@ -38,11 +39,6 @@
                 </a>
             </div>
         </main>
-
-        <footer>
-            <p>Последняя версия программы вышла: 03.09.2023</p>
-            <p>Разработал Mr Nichosik</p>
-        </footer>
 
         <script src="dist\js\lightbox-plus-jquery.js"></script>
     </body>
