--- a/index.html
+++ b/index.html
@@ -4,31 +4,39 @@
         <meta charset="UTF-8">
         <meta name="description" content="Текстовый редактор TextPad+">
 
-        <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link href="dist\css\lightbox.css" rel="stylesheet" type="text/css"/>
-
         <title>TextPad+</title>
         <link rel="shortcut icon" href="res\TextPadLogo.png" type="image/x-icon">
+
+        <link href="style.css" rel="stylesheet"/>
+        <link href="adaptive.css" rel="stylesheet"/>
+        <link href="dist\css\lightbox.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
         <header>
-            <a class="link" id=MainPage href="https://mr-nichosik.github.io/Main_Page/">Главная</a>
-            <a class="link" id=SiteName href="https://mr-nichosik.github.io/Main_Page/"><h5>TextPad+</h5></a>
-            <a class="link" id=DownloadsPage href="https://mr-nichosik.github.io/AboutTextPadPlus/">Загрузки</a>
+            <a class="link" id=MainPage href="https://mr-nichosik.github.io/Main_Page/"><h5>Главная</h5></a>
+            <a class="link" id=DownloadsPage href="https://mr-nichosik.github.io/AboutTextPadPlus/"><h5>Загрузки</h5></a>
         </header>
 
-        <main>
-            <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
-            <p id=AboutTextPad>TextPad+ — это простой текстовый редактор с открытым исходным кодом, сделаный на C# .NET 8. Работает на ПК архитектуры x86 и ОС Windows 7 и выше. </p>
-            <p id="InstallationGuide">Инструкци по установке:<br>Программа, начиная с версии 2.5.0, доступна для скачивания с ветки релиза на GitHub, а для работы не требуется ни чего устанавливать.<br>Для версий с 1.9 по 2.4.0 включительно нужно установить для библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для более старых версий нужно установить только библиотеку для .NET Core 3.1.</p>
-            <a class="link" id="GitHubSource" href="https://github.com/Mr-Nichosik/TextPadPlus" target="_blank">Исходный код программы на GitHub</a>
-            <a class="link" id=SDK8-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/8.0">.Net 8.0</a>
-            <a class="link" id=SDK6-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
-            <a class="link" id=SDK5-0 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
-            <a class="link" id=SDK3-1 href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
-            <a class="Button" id="DownloadTextPad" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe" >Скачать TextPad+ 2.7.0</a>
-            <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/">Все версии</a>
+        <main>      
+            <div class="containerd" id=DescriptionBlock>
+                <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
+                <p id=AboutTextPad>TextPad+ — это простой текстовый редактор с открытым исходным кодом, сделаный на C# .NET 8. Работает на ПК архитектуры x86 и ОС Windows 7 и выше. </p>
+            </div>
+
+            <div class="container" id=InstallationGuideBlock>
+                <p id="InstallationGuide">Инструкци по установке:<br>Программа, начиная с версии 2.5.0, доступна для скачивания с ветки релиза на GitHub, а для работы не требуется ни чего устанавливать.<br>Для версий с 1.9 по 2.4.0 включительно нужно установить для библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для более старых версий нужно установить только библиотеку для .NET Core 3.1.</p>    
+            </div>
+
+            <div class="container" id=LinksBlock>
+                <a class="link" id="GitHubSource" href="https://github.com/Mr-Nichosik/TextPadPlus" target="_blank">Исходный код программы на GitHub</a>
+                <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/8.0">.Net 8.0</a>
+                <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
+                <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
+                <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
+                <a class="Button" id="DownloadTextPad" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe" >Скачать TextPad+ 2.8.0</a>
+                <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/">Все версии</a>
+            </div>
 
             <div class="container">
                 <a href="res\ScreenTextPad1.png" data-lightbox="test">
