--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="container" id=InstallationGuideBlock>
-                <p id="InstallationGuide">Инструкци по установке:<br>Программа, начиная с версии 2.5.0, доступна для скачивания с ветки релиза на GitHub, а для работы не требуется ни чего устанавливать.<br>Для версий с 1.9 по 2.4.0 включительно нужно установить для библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для более старых версий нужно установить только библиотеку для .NET Core 3.1.</p>    
+                <p id="InstallationGuide">Инструкци по установке:<br>Программа, начиная с версии 2.5.0, доступна для скачивания с ветки релиза на GitHub, а для работы не требуется ни чего устанавливать.<br>Для версий с 1.9 по 2.4.0 включительно нужно установить библиотеку .NET 6.0 Desktop Runtime. Для версий с 1.4 по 1.8 включительно нужны библиотеки .NET Core 3.1 и .NET 5 Runtime Desktop. Для более старых версий нужно установить только .NET Core 3.1 Desktop Runtime.</p>    
             </div>
 
             <div class="container" id=LinksBlock>
