--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Текстовый редактор TextPad+">
+        <meta name="google-site-verification" content="m4z6I-xnkBrjA6l6Rj1DbGydXbkoVP6dD0F1ux7vSYs" />
 
         <title>TextPad+</title>
         <link rel="shortcut icon" href="res\TextPadLogo.png" type="image/x-icon">
