--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
                 <a class="link" id=SDK href="https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
                 <a class="Button" id="DownloadTextPad" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe" >Скачать TextPad+ 2.9.0</a>
-                <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/AboutTextPadPlus/">Все версии</a>
+                <a class="Button" id="AllDownloads" href="https://mr-nichosik.github.io/MrNichosik/TextPadPlusDownloads">Все версии</a>
             </div>
 
             <div class="container">
