--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <main>
             <div class="container" id=DescriptionBlock>
-                <img id="ProgramLogo" src="res\TextPadLogo.png" height="60">
+                <img id="ProgramLogo" src="res\TextPadLogo.png">
                 <p id=AboutTextPad>TextPad+ — это простой текстовый редактор с открытым исходным кодом, разработанный на C# .NET 8. Работает на ПК архитектуры x86 и ОС Windows 7 и выше. </p>
             </div>
 
@@ -43,11 +43,11 @@
 
             <div class="container">
                 <a href="res\ScreenTextPad1.png" data-lightbox="Скриншот 1">
-                    <img class="minimized" id="ScreenTextPad1" src="res\ScreenTextPad1.png" alt="Скриншот программы TextPad+" />
+                    <img class="minimized" id="ScreenTextPad1" src="res\ScreenTextPad1.png" alt="Скриншот программы" />
                 </a>
 
                 <a href="res\ScreenTextPad2.png" data-lightbox="Скриншот 2">
-                    <img class="minimized" id="ScreenTextPad2" src="res\ScreenTextPad2.png" alt="Скриншот программы TextPad+" />
+                    <img class="minimized" id="ScreenTextPad2" src="res\ScreenTextPad2.png" alt="Скриншот программы" />
                 </a>
             </div>
         </main>
