Button click effect fix

--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -175,7 +175,7 @@
                 </div>
     
                 <div class="ContainerDownload">
-                    <p class="VersionDescription" id="tp290about">Исправлено большое количество ошибок, добавлена функция "Сохранить все", добавлен запуск html файлов в браузере по умолчанию, окно поиска перенесено в панель, добавлен переход по ссылкам (можно отключить в настройках)</p>    
+                    <p class="VersionDescription" id="tp290about">Исправлено большое количество ошибок, добавлена функция "Сохранить все", добавлен запуск html файлов в браузере по умолчанию, окно поиска перенесено в панель, добавлен переход по ссылкам (можно отключить в настройках), добавлено автосохранение, исправлены ошибки</p>    
                     <a class="Button" id="tp290" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/v2.9.0/Setup.exe">Скачать TextPad+ 2.9.0</a>
                 </div>
             </div>
