--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -179,6 +179,12 @@
                     <a class="Button" id="tp290" href="https://github.com/Mr-Nichosik/TextPadPlus/releases/download/v2.9.0/Setup.exe">Скачать TextPad+ 2.9.0</a>
                 </div>
             </div>
+
+            <div class = "Container" id = "FooterBlock">
+                <footer>
+                    <a class = "link" id = "FooterGitHubLink" href = "https://github.com/Mr-Nichosik/" target = "_blank">GitHub</a>
+                </footer>
+            </div>
     
         </main>
 
