--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             </div>
 
             <div class = "container" id = "LinksBlock">
-                <a class = "link" id = "GitHubSource" href = "https://github.com/Mr-Nichosik/TextPadPlus">Исходный код на GitHub</a>
-                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/8.0">.Net 8.0</a>
-                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer">.Net 6.0</a>
-                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer">.Net 5.0</a>
-                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer">.Net Core 3.1</a>
+                <a class = "link" id = "GitHubSource" href = "https://github.com/Mr-Nichosik/TextPadPlus" target = "_blank">Исходный код на GitHub</a>
+                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/8.0" >.Net 8.0</a>
+                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-6.0.16-windows-x86-installer" target = "_blank">.Net 6.0</a>
+                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-5.0.17-windows-x86-installer" target = "_blank">.Net 5.0</a>
+                <a class = "link" id = SDK href = "https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/runtime-desktop-3.1.32-windows-x86-installer" target = "_blank">.Net Core 3.1</a>
             </div>
 
             <div class = "container" id = "ButtonsBlock">
-                <a class = "Button" id = "DownloadTextPad" href = "https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe" >Скачать TextPad+ 2.9.0</a>
+                <a class = "Button" id = "DownloadTextPad" href = "https://github.com/Mr-Nichosik/TextPadPlus/releases/download/vCurrent/Setup.exe">Скачать TextPad+ 2.9.0</a>
                 <a class = "Button" id = "AllDownloads" href = "https://mr-nichosik.github.io/MrNichosik/Downloads/">Все версии</a>
             </div>
 
